styles.css
/*linking in css stylesheet to pull in different style defaults for small/mobile screens- note page was not designed mobile first due to the parameters of this project*/
@import url('desktop-styles.css') (min-width:800px);



#portfolio-button {
	background-color: #ff7400;
	color: white;
}

#portfolio-button a {
	color: white;
	font-family: "Cantora One", sans-serif;
	font-style: normal;
}

#resume-button {
	background-color: #ff7400;
}

#resume-button a {
	color: white;
	font-family: "Cantora One", sans-serif;
	font-style: normal;
}
button a {
	text-decoration: none;
}
button a:hover{
	text-decoration:underline;
}
#home-page {
	background-color: #f0cfce;

}
#home-page a {
	color: black;
	font-family: ;
}
@media screen and (min-width: 1000px) {
	.homepage-head-background {
		width: 100%;
		height: 500px;
		margin-bottom: 0;
		background-size: cover;
		background: url('portfolio-header.svg');
		background-repeat: no-repeat;
		/*overflow: hidden;*/
	}
	h1 {
		background-color: white;
		margin-right: 10%;
		margin-left: 10%;
		margin-top: 10%;
		padding: 5px;
		font-family: 'Gorditas', serif;
		font-size: 2.5em;
		text-align: center;
	}
}
@media screen and (min-width:600px) and (max-width: 1000px){
	.homepage-head-background {
		width: 100%;
		height: 200px;
		background-size: cover;
		background: url('portfolio-header.svg');
		background-repeat: round;
		/*overflow: hidden;*/
	}
	h1 {
		background-color: white;
		margin-right: 10%;
		margin-left: 10%;
		margin-top: 10%;
		padding: 5px;
		font-family: 'Gorditas', serif;
		font-size: 2em;
		text-align: center;
	}
}
@media screen and (min-width:480px) and (max-width: 600px){
	.homepage-head-background {
		width: 100%;
		height: 350px;
		background: url('portfolio-header-480-600.svg');
		background-size: cover;
		background-repeat: no-repeat;
	}
	h1 {
		margin-left: 10%;
		margin-right: 10%;
		margin-top: 20%;
		margin-bottom: 0;
		font-size: 2.5em;
		background-color: white;
	}
}
@media screen and (max-width: 480px){
	.homepage-head-background {
	width: 100%;
	height: 400px;
	background-size: cover;
	background: url('portfolio-mobile-header.svg');
	background-repeat: no-repeat;
}
h1 {
	margin-left: 10%;
	margin-right: 10%;
	margin-top: 20%;
	margin-bottom: 0;
	font-size: 2.5em;
	background-color: white;
}
}

/* Styling the Portfolio Page*/
h2 {
	color: black;
	font-size: 1.25em;
}

/* Styling "defaults" across all pages*/
body {
	color: #753EB7;
	text-align: center;
	background-color: white;
}

.attribution {
	color: #753EB7;
	background-color: white;
	text-align: center;
	padding: 5px;
	margin-top:50px;
}

/* Portfolio Homepage */
.container {
    display: grid;
    grid-template-columns: 33% 33% 33%;
    background-color: pink;
    padding: 0 15px 0 0;
	gap: 10px 10px;
}
.container > div {
	background-color: #f1f1f1;
	border: 1px solid black;
	padding: 1fr;
	/* font-size: 1em; */
	text-align: center;
  }
.project-thumbnail {
	width: 150px;
}
/* HOMEPAGE */

/* header for the Homepage*/

#welcome {
    font-family: "Galindo", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: black;
      }

/* Content Layout- Homepage*/

.homepage {
	display: flex;
	flex-direction: column;
}

.project-thumbnail:hover {
	/*rotate:20deg;*/
	transform:scale(1.1);
}

/* Homepage- text content styling*/
.about-message{
	font-family: 'Calistoga', serif;
	margin-left: 13%;
	margin-right: 13%;
	font-size:2em;
}

header {
	color: black;
	background-color: #000000;
	padding: 10px 0;
	width:100%;

}

button {
	color: white;
	background-color: #FFCAD7;
	padding: 20px;
	font-size: 1.5em;
	border-radius: 10px;
	font-family: "Cantora One", sans-serif;
	margin-top: 20px;
}

/* Navigation (Buttons) for Sub-Pages- initially set up as links embedded in buttons, had to switch due to code validation issues*/
/*.fake-button {
	color: white;
	background-color: #FFCAD7;
	padding: 20px;
	font-size: 1.5em;
	border-radius: 10px;
	font-family: 'Gorditas', serif;
	margin-top: 40px;
	outline: 2px solid black;
	text-decoration: none;
}
*/
a:hover{
	text-decoration:underline;
}

